--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,13 +10,15 @@ body, html, .background {
 
 /* From Uiverse.io by joe-watson-sbf */ 
 .card {
+  
+  width: 90%;
   width: 510px;
   height: 554px;
   border-radius: 4px;
   display: flex;
   gap: 5px;
-  padding: .4em;
- 
+  padding: .7em;
+  margin: 100px;
 }
 
 .card .box {
@@ -32,6 +34,7 @@ body, html, .background {
   display: flex;
   justify-content: center;
   align-items: center;
+  
 }
 
 
@@ -54,4 +57,11 @@ body, html, .background {
 
 .card .box:hover span {
   transform: rotate(0);
+}
+
+@media(max-width: 400px){
+  .card{
+    height: 454px;
+    width: 410px;
+  }
 }
